[gd_scene load_steps=19 format=2]

[ext_resource path="res://ResultScreen/Lose.gd" type="Script" id=1]
[ext_resource path="res://Start/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Start/p1.png" type="Texture" id=3]
[ext_resource path="res://ResultScreen/tear.png" type="Texture" id=4]
[ext_resource path="res://WorldSelection/jungle.png" type="Texture" id=5]
[ext_resource path="res://WorldSelection/ice.png" type="Texture" id=6]
[ext_resource path="res://WorldSelection/fire.png" type="Texture" id=7]
[ext_resource path="res://ResultScreen/score.gd" type="Script" id=8]
[ext_resource path="res://ResultScreen/grey_button05.png" type="Texture" id=9]
[ext_resource path="res://ResultScreen/jump.png" type="Texture" id=10]
[ext_resource path="res://ResultScreen/sheid.png" type="Texture" id=11]
[ext_resource path="res://ResultScreen/speed.png" type="Texture" id=12]
[ext_resource path="res://ResultScreen/sword.png" type="Texture" id=13]
[ext_resource path="res://ResultScreen/yellow_sliderRight.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 33
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 19
font_data = ExtResource( 2 )

[node name="Lose2" type="Control"]
script = ExtResource( 1 )

[node name="sky" type="Polygon2D" parent="."]
position = Vector2( -56, 15 )
color = Color( 0.0431373, 0.0745098, 0.345098, 1 )
polygon = PoolVector2Array( -26, -18, -46, 440, 1125, 438, 1121, -21 )

[node name="ground" type="Polygon2D" parent="."]
position = Vector2( 6, 81 )
color = Color( 0.521569, 1, 0, 1 )
polygon = PoolVector2Array( -35, 364, 1049, 363, 1046, 603, -33, 606 )

[node name="P1" type="Sprite" parent="."]
position = Vector2( 511, 388 )
scale = Vector2( 1.01563, 1.01563 )
texture = ExtResource( 3 )

[node name="lose2" type="Node2D" parent="."]

[node name="lose" type="Label" parent="lose2"]
margin_left = 426.0
margin_top = 126.0
margin_right = 583.0
margin_bottom = 171.0
custom_colors/font_color = Color( 1, 0.470588, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "lose!"

[node name="junglestage" type="Node2D" parent="."]

[node name="stage1" type="Label" parent="junglestage"]
margin_left = 404.0
margin_top = 42.0
margin_right = 566.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 3 )
text = "stage 1"

[node name="Jungle" type="Sprite" parent="junglestage"]
position = Vector2( 635.375, 60.5 )
scale = Vector2( 0.132995, 0.155594 )
texture = ExtResource( 5 )

[node name="lavastage" type="Node2D" parent="."]

[node name="Fire" type="Sprite" parent="lavastage"]
position = Vector2( 637, 58.0226 )
scale = Vector2( 0.117526, 0.125285 )
texture = ExtResource( 7 )

[node name="stage2" type="Label" parent="lavastage"]
margin_left = 404.0
margin_top = 41.0
margin_right = 579.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "stage 2"

[node name="icestage" type="Node2D" parent="."]

[node name="Ice" type="Sprite" parent="icestage"]
position = Vector2( 636, 59.1875 )
scale = Vector2( 0.224169, 0.21875 )
texture = ExtResource( 6 )

[node name="stage3" type="Label" parent="icestage"]
margin_left = 404.0
margin_top = 41.0
margin_right = 579.0
margin_bottom = 79.0
custom_fonts/font = SubResource( 3 )
text = "stage 3"

[node name="score" type="Label" parent="."]
margin_left = 629.0
margin_top = 309.0
margin_right = 798.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 4 )
text = "score = 0"
script = ExtResource( 8 )

[node name="NextButton" type="MenuButton" parent="."]
margin_left = 791.0
margin_top = 521.0
margin_right = 1021.0
margin_bottom = 598.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Play next stage"

[node name="selectText" type="Label" parent="."]
margin_left = 252.0
margin_top = 190.0
margin_right = 777.0
margin_bottom = 235.0
custom_colors/font_color = Color( 1, 0.760784, 0.54902, 1 )
custom_fonts/font = SubResource( 2 )
text = "you can get an item"

[node name="Tear" type="Sprite" parent="."]
position = Vector2( 496.457, 389 )
scale = Vector2( 0.0149714, 0.0135417 )
texture = ExtResource( 4 )

[node name="Tear2" type="Sprite" parent="."]
position = Vector2( 544, 389 )
scale = Vector2( 0.0149714, 0.0135417 )
texture = ExtResource( 4 )

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="Item" type="Sprite" parent="."]
position = Vector2( 908, 278 )
rotation = 1.57544
scale = Vector2( 2.2577, 2.82197 )
texture = ExtResource( 9 )

[node name="Sword" type="Sprite" parent="Item"]
position = Vector2( -64.6616, 1.36395 )
rotation = -1.57687
scale = Vector2( 0.373471, 0.398736 )
texture = ExtResource( 13 )

[node name="Shied" type="Sprite" parent="Item"]
position = Vector2( -18.1557, 0.776245 )
rotation = -1.57687
scale = Vector2( 0.301004, 0.313298 )
texture = ExtResource( 11 )

[node name="speed" type="Sprite" parent="Item"]
position = Vector2( 21.2686, 1.33841 )
rotation = -1.57687
scale = Vector2( 0.0246332, 0.0321984 )
texture = ExtResource( 12 )

[node name="Jump" type="Sprite" parent="Item"]
position = Vector2( 64.6826, 0.115723 )
rotation = -1.57687
scale = Vector2( 0.0819971, 0.100909 )
texture = ExtResource( 10 )

[node name="killbutton" type="TextureButton" parent="Item"]
margin_left = -83.0
margin_top = -10.0
margin_right = -45.0
margin_bottom = 12.0

[node name="shiedbutton" type="TextureButton" parent="Item"]
margin_left = -32.0
margin_top = -9.0
margin_right = -4.0
margin_bottom = 11.0

[node name="speedbutton" type="TextureButton" parent="Item"]
margin_left = 8.0
margin_top = -10.0
margin_right = 35.0
margin_bottom = 12.0

[node name="jumpbutton" type="TextureButton" parent="Item"]
margin_left = 48.0
margin_top = -11.0
margin_right = 82.0
margin_bottom = 12.0

[node name="selection" type="Sprite" parent="."]
texture = ExtResource( 14 )

[node name="kill" type="Label" parent="."]
margin_left = 919.0
margin_top = 161.0
margin_right = 976.0
margin_bottom = 187.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "kill"

[node name="shield" type="Label" parent="."]
margin_left = 914.0
margin_top = 263.0
margin_right = 995.0
margin_bottom = 289.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "shield"

[node name="shield2" type="Label" parent="."]
margin_left = 915.0
margin_top = 355.0
margin_right = 996.0
margin_bottom = 381.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "speed"

[node name="shield3" type="Label" parent="."]
margin_left = 917.0
margin_top = 458.0
margin_right = 998.0
margin_bottom = 484.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "jump"

[connection signal="score_added" from="." to="score" method="_on_result_score_added"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="Item/killbutton" to="." method="_on_killbutton_pressed"]
[connection signal="pressed" from="Item/shiedbutton" to="." method="_on_killbutton_pressed"]
[connection signal="pressed" from="Item/shiedbutton" to="." method="_on_shiedbutton_pressed"]
[connection signal="pressed" from="Item/speedbutton" to="." method="_on_killbutton_pressed"]
[connection signal="pressed" from="Item/speedbutton" to="." method="_on_speedbutton_pressed"]
[connection signal="pressed" from="Item/jumpbutton" to="." method="_on_killbutton_pressed"]
[connection signal="pressed" from="Item/jumpbutton" to="." method="_on_jumpbutton_pressed"]
